Added some test methods to deploy and test

--- a/ato-endpoints/pom.xml
+++ b/ato-endpoints/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.ato</groupId>
+            <artifactId>atoagent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
