--- a/customer-api/pom.xml
+++ b/customer-api/pom.xml
@@ -8,12 +8,12 @@
         <version>3.0.0-M2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.ato</groupId>
-    <artifactId>ato-endpoints</artifactId>
+    <groupId>com.customer</groupId>
+    <artifactId>customer-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>ato-endpoints</name>
-    <description>ato-endpoints</description>
+    <name>customer-api</name>
+    <description>customer-api</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -21,12 +21,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -48,17 +42,6 @@
             <artifactId>atoagent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>io.airbrake</groupId>
-            <artifactId>javabrake</artifactId>
-            <version>0.2.4</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.google.code.gson</groupId>-->
-<!--            <artifactId>gson</artifactId>-->
-<!--            <version>2.8.6</version>-->
-<!--            &lt;!&ndash;            <scope>compile</scope>&ndash;&gt;-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
@@ -77,6 +60,7 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <id>spring-milestones</id>
