adding the backend email code

--- a/ato-endpoints/src/main/resources/application.properties
+++ b/ato-endpoints/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+##########   Mail Properties ###############
+spring.mail.host=mail.escuelatech.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=letstalk@escuelatech.com
+spring.mail.password=Kaditham@123
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.timeout=8000
