--- a/ato-endpoints/pom.xml
+++ b/ato-endpoints/pom.xml
@@ -44,6 +44,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.ato</groupId>
             <artifactId>atoagent</artifactId>
             <version>1.0-SNAPSHOT</version>
